# aoc-2024

./: Cargo.toml
src/day-01/: main.rs
src/day-02/: main.rs
src/day-03/: main.rs
src/day-04/: main.rs
src/day-05/: main.rs
src/day-06/: main.rs
src/day-07/: main.rs
src/day-08/: main.rs
src/day-09/: main.rs
src/day-10/: main.rs
src/day-11/: main.rs
src/day-12/: main.rs
src/day-13/: main.rs
src/day-14/: main.rs
src/day-15/: main.rs
src/day-16/: main.rs
src/day-17/: main.rs
src/day-18/: main.rs
src/day-19/: main.rs
src/day-20/: main.rs
