[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-01"
path = "src/day-01/main.rs"

# [[bin]]
# name = "day-02"
# path = "src/day-02/main.rs"

# [[bin]]
# name = "day-03"
# path = "src/day-03/main.rs"

# [[bin]]
# name = "day-04"
# path = "src/day-04/main.rs"

# [[bin]]
# name = "day-05"
# path = "src/day-05/main.rs"

# [[bin]]
# name = "day-06"
# path = "src/day-06/main.rs"

# [[bin]]
# name = "day-07"
# path = "src/day-07/main.rs"

# [[bin]]
# name = "day-08"
# path = "src/day-08/main.rs"

# [[bin]]
# name = "day-09"
# path = "src/day-09/main.rs"

# [[bin]]
# name = "day-10"
# path = "src/day-10/main.rs"

# [[bin]]
# name = "day-11"
# path = "src/day-11/main.rs"

# [[bin]]
# name = "day-12"
# path = "src/day-12/main.rs"

# [[bin]]
# name = "day-13"
# path = "src/day-13/main.rs"

# [[bin]]
# name = "day-14"
# path = "src/day-14/main.rs"

# [[bin]]
# name = "day-15"
# path = "src/day-15/main.rs"

# [[bin]]
# name = "day-16"
# path = "src/day-16/main.rs"

# [[bin]]
# name = "day-17"
# path = "src/day-17/main.rs"

# [[bin]]
# name = "day-18"
# path = "src/day-18/main.rs"

# [[bin]]
# name = "day-19"
# path = "src/day-19/main.rs"

# [[bin]]
# name = "day-20"
# path = "src/day-20/main.rs"

# [[bin]]
# name = "day-21"
# path = "src/day-21/main.rs"

# [[bin]]
# name = "day-22"
# path = "src/day-22/main.rs"

# [[bin]]
# name = "day-23"
# path = "src/day-23/main.rs"

# [[bin]]
# name = "day-24"
# path = "src/day-24/main.rs"

# [[bin]]
# name = "day-25"
# path = "src/day-25/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
bstr = "1.11.0"
fnv = "1.0.7"
itertools = "0.13.0"
mimalloc-rust = "0.2.1"
